<resources>
    <string name="app_name">Football Match App</string>
    <string name="title_match">Match</string>
    <string name="title_next_match">Next Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_default" />
    <string name="vs">VS</string>
    <string name="schedule_default">Schedule</string>
    <string name="home_team_default">Home Team</string>
    <string name="away_team_default">Away Team</string>
    <string name="home_team_badge">Home Image Description</string>
    <string name="away_team_badge">Away Image Description</string>
    <string name="goals">Goals</string>
    <string name="formation">Formation</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="detail_text">%1$s\n%2$s</string>
    <string name="title_favorites">Favorite</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="team">Team</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_team_detail">Team Detail</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="overview">OVERVIEW</string>
    <string name="player">PLAYER</string>
    <string name="team_badge">Team Badge</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (M)</string>
    <string name="title_search">Search</string>
</resources>
