<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".fragment.MatchItemFragment">

    <TextView
        android:id="@+id/matchSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_default"
        android:textAlignment="center"
        android:textColor="?attr/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/homeTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_team_default"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/homeScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score_default"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/vs"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/awayTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/away_team_default"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/awayScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score_default"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>