<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MatchDetailActivity">

    <TextView
        android:id="@+id/eventSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/schedule_default"
        android:textAlignment="center"
        android:textColor="?attr/colorAccent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@android:color/white"
        android:padding="5dp">

        <TextView
            android:id="@+id/homeTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173" />

        <ImageView
            android:id="@+id/homeBadge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/home_team_badge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeTeamScore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/homeTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/home_team_default"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeTeamScore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeBadge"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/awayTeamScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003" />

        <ImageView
            android:id="@+id/awayBadge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/away_team_badge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/awayTeamScore"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/awayTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/away_team_default"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/awayTeamScore"
            app:layout_constraintTop_toBottomOf="@+id/awayBadge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/vs"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26999998" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">

            <TableRow
                android:id="@+id/rowFormation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/homeFormation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtFormation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/formation"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awayFormation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow
                android:id="@+id/rowGoals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/homeGoals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtGoals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goals"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awayGoals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/rowRedCards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/homeRedCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtRedCards"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/red_cards"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awayRedCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/rowYellowCards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/homeYellowCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtYellowCards"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yellow_cards"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awayYellowCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/rowGoalKeeper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/homeGoalKeeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtGoalKeeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/goal_keeper"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awayGoalKeeper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/rowDefense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/homeDefense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtDefense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/defense"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awayDefense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/rowMidField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/homeMidField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtMidField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/midfield"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awayMidField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/rowForward"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/homeForward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtForward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forward"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awayForward"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>

            <TableRow
                android:id="@+id/rowSubstitutes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/background_light"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/homeSubstitutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtSubstitutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/substitutes"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awaySubstitutes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</LinearLayout>